Fix end condition for drop_take and sliding iterator Fix bad ctor args usage after move Add compositional view tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,15 +30,15 @@ set(LINK_FLAGS
 
 add_executable(tests
         test/test_view.cpp
-#        test/test_vector.cpp
-#        test/test_optional.cpp
-#        test/test_list.cpp
-#        test/test_deque.cpp
-#        test/test_set.cpp
-#        test/test_unordered_set.cpp
-#        test/test_map.cpp
-#        test/test_string.cpp
-#        test/test_unordered_map.cpp
+        test/test_vector.cpp
+        test/test_optional.cpp
+        test/test_list.cpp
+        test/test_deque.cpp
+        test/test_set.cpp
+        test/test_unordered_set.cpp
+        test/test_map.cpp
+        test/test_string.cpp
+        test/test_unordered_map.cpp
 )
 
 #test/test_array.cpp
