Fix raw pointer support for views

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,8 @@ if (ASPARTAME_ENABLE_TEST OR ASPARTAME_ENABLE_BENCHMARK OR ASPARTAME_ENABLE_EXAM
                 test/test_view_concat.cpp
                 test/test_view_ownership.cpp
 
+                test/test_view_custom_ptr_iterator.cpp
+
                 test/test_vector.cpp
                 test/test_optional.cpp
                 test/test_list.cpp
